--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -6,7 +6,22 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.82.0">
-    <title>Youngsuk's site</title>
+
+    <!-- SEO -->
+    <meta name="description" content="The easiest way to find freelancers near you">
+    <meta name="title" content="Hilacners">
+    <meta property="og:site_name" content="HiLancers">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="HiLancers">
+    <meta property="og:description" content="The easiest way to find freelancers near you">
+    <meta property="og:image" content="">
+    <meta name="referrer" content="always">
+    <link rel="canonical" href="https://www.hilancers.com">    
+    <!-- SEO END -->
+
+
+
+    <title>HiLancers!</title>
     <!-- {% load static %} -->
     <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
     
